# rork-mongars-ai-platform

./: .gitignore  .gitmodules  .pnp.cjs  .prettierignore  CROSS_PLATFORM_ML.md  DEPLOYMENT.md  DEPLOYMENT_SETUP.md  Gemfile  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  INTROSPECTION.md  LOCAL_LLM_SETUP.md  README.md  REAL_IMPLEMENTATIONS.md  SECURITY.md  app.config.js  app.config.js.bak  app.json  credentials.json  eas.json  jest.config.js  package-lock.json  package.json  prettier-plugin-swift.js  settings.gradle
.eas/workflows/: submit-ios.yml
.github/workflows/: gemfile-lock-macos.yml  ios-build.yml  ios-local-build-and-submit.yml  ios-native-build.yml  ios-production.yml
android/: build.gradle  settings.gradle
android/app/: build.gradle
app/: _layout.tsx  index.tsx
app/(auth)/: login.tsx
app/(tabs)/: _layout.tsx  calendar.tsx  camera.tsx  chat.tsx  consciousness.tsx  contacts.tsx  diagnostics.tsx  evolution.tsx  introspection.tsx  location.tsx  memory.tsx  models.tsx
components/: AffectiveFieldVisualizer.tsx  ErrorBoundary.tsx  ModelDownloader.tsx  PerformanceMetrics.tsx  ProtoPhenomenologyMetrics.tsx
constants/: colors.ts
credentials/ios/: dist-cert.p12  (+3 more)
ios/: Gemfile  Podfile
modules/native-llm/android/src/main/cpp/: CMakeLists.txt  native_llm_jni.cpp
patches/: expo-modules-core+3.0.29.patch  expo-updates+29.0.15.patch  expo-updates+29.0.16.patch
plugins/: withCoreMLModel.js  withMLXPods.js
scripts/: eas-pre-build.sh  eas-pre-install.sh  format.sh
types/: affective.ts  auth.ts  core-ml.ts  index.ts  introspection.ts  model-manager.ts
(+102 files in other folders)
